# mgx-demo

./: .dockerignore  .eslintignore  .gitignore  .prettierignore  CODE_GENERATION_DIAGNOSTICS.md  DUPLICATE_MESSAGE_FIX.md  README.md  SETUP_CHECK.md  analysis_log_issue.md  check_setup.sh  test_setup.sh
backend/: .env.example  .flake8  pyproject.toml  requirements.txt  test_container_status.py  test_health.py
backend/src/: config.py  main.py
backend/src/agents/app_creator/: ANALYSIS.md  FIX_SUMMARY.md  ISSUE_ROOT_CAUSE.md  REDUCE_CLARIFICATIONS.md  __init__.py  agent.py  llm_config.py  state.py
backend/src/agents/code_gen/: __init__.py  agent.py
backend/src/agents/tools/: __init__.py  command_exec.py  file_ops.py
backend/src/api/: applications.py  auth.py  conversations.py
backend/src/containers/: __init__.py  docker_client.py  exec.py  file_content.py  file_ops.py  file_tree.py
backend/src/middleware/: auth.py
backend/src/models/: application.py  container.py  conversation.py  session.py  user.py
backend/src/services/: database.py
backend/src/services/agent/: __init__.py  code_gen_service.py
backend/src/services/application/: __init__.py  application_service.py
backend/src/services/auth/: __init__.py  auth_service.py
backend/src/services/container/: __init__.py  container_lifecycle.py  container_service.py
backend/src/services/conversation/: __init__.py  conversation_service.py
backend/src/services/session/: __init__.py  session_service.py
backend/src/utils/: errors.py  logger.py  sse_formatter.py
fe/: .eslintrc.json  package-lock.json  (+1 more)
(+38 files in other folders)
